Added visualization example of bar chart with matplotlib
will intergrate the plotting with interaction of ipywidgets in the
future to show interactive plots

--- a/Simon's world cup 2018 playground.ipynb
+++ b/Simon's world cup 2018 playground.ipynb
@@ -46,6 +46,7 @@
     "    ```python\n",
     "    out.clear_output()\n",
     "    ```\n",
+    "\n",
     "##### 2. ipwidgets.Image\n",
     "[see this doc](https://ipywidgets.readthedocs.io/en/latest/examples/Widget%20List.html?#Image)\n",
     "\n",
@@ -53,12 +54,26 @@
     "    ```python\n",
     "    f_image = open(\"image.png\", 'rb')\n",
     "    ```\n",
+    "\n",
     "##### 3. ipwidgets.interact and ipwidgets.interactive\n",
     "[see this doc](https://ipywidgets.readthedocs.io/en/latest/examples/Using%20Interact.html)\n",
     "\n",
     "**interact** directly display the widgets, while **interactive** returns a widgets which is not displayed directly.\n",
     "\n",
-    "##### 4. use ipwidgets.VBox and ipwidgets.HBox to allign widgets (they work as containers)"
+    "##### 4. use ipwidgets.VBox and ipwidgets.HBox to allign widgets (they work as containers)\n",
+    "\n",
+    "### NOTES to matplotlib\n",
+    "[matplotlib doc](https://matplotlib.org/)\n",
+    "\n",
+    "##### 1. Bar Chart\n",
+    "\n",
+    "[doc](https://matplotlib.org/api/_as_gen/matplotlib.axes.Axes.bar.html?highlight=bar#matplotlib.axes.Axes.bar)\n",
+    "\n",
+    "see also:\n",
+    "\n",
+    "https://matplotlib.org/gallery/statistics/barchart_demo.html#sphx-glr-gallery-statistics-barchart-demo-py\n",
+    "\n",
+    "https://matplotlib.org/gallery/lines_bars_and_markers/barchart.html#sphx-glr-gallery-lines-bars-and-markers-barchart-py\n"
    ]
   },
   {
@@ -583,7 +598,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### interactive with *ipwidgets*"
+    "## interactive with *ipwidgets*"
    ]
   },
   {
@@ -698,6 +713,81 @@
     "\n",
     "choose_team_dropdown = widgets.interactive(showTeamInfo, x =widgets.Dropdown(description=\"Team\", options=team_dict))\n",
     "display(choose_team_dropdown)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## try visualization with matplotlib"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### bar chart"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAagAAAEYCAYAAAAJeGK1AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAIABJREFUeJzt3XuclVW9x/HPD1BQrnIzFGVQMRAY\nBhxBFGnM8EKWKaYgKShGaqZlWh7NI1kknTDN8oiYBhJM3m+keAGRk1GAgIgoYYoNispFEBBkhN/5\nY60Z9gxzv+2Hme/79dqvefZzW79n7dnP77nttczdERERSZpG6Q5ARESkJEpQIiKSSEpQIiKSSEpQ\nIiKSSEpQIiKSSEpQIiKSSEpQUifMbKSZPV/FZd8ws5wajOVZMxtVU+urbWa22sy+lu44ROqaEpQA\nYGaDzOzvZrbZzDaa2StmdlycNtrM/laJdWWYmZtZk4Jx7j7d3U+twLJTzOyXqePcvae7z63E5pTJ\n3c9w96lVWTYmi51m1r7Y+KVxmzMqsI696qemmNnJZva6mW0ysw1m9riZHZoyvamZ3W9mn5rZh2Z2\nTbHlTzGzt8zsMzN7ycy6pEz7HzPLi8u+Z2Y3pkxrH/9nNsSy55vZiSnTe5nZc2a23sz2+vGlmc01\nsx1mtjW+VhabfkEsc5uZPWFmbVOm/dnM1sa4/mVml1a/JiUJlKAEM2sFzAR+D7QFDgV+DnyezrgS\n7F1gRMEbM+sNHJC+cIpYAZzm7m2AQ4BVwN0p08cB3YAuwMnAT8zsdAhJBngMuInwf7AIeDBl2fuA\n7u7eCjgBuMDMzonTtgKXAB2Ag4BfA0+nJOF84CFgTBmxX+nuLeLrywUjzawncA9wIXAw8BnwvynL\n3QpkxLi+CfzSzI4tq5JkH+HuejXwF5ANbCplWg9gB7CLsBPaFMd/HVgCfArkAeNSlvkP4HH+rcBA\nYDTwtzjdgNuBj4HNwDKgFzCWsCPbGZd7Os6/GvhaHG4M3AD8G9gCvAocVto6S9mmucClcXg08Ddg\nIvAJIfmcUUZdrQZ+BixMGTcRuDFuc0ZV6ieO/y7wZtyuFUC/lDKvjdu0mZA0mlXgc21K2HmvSBn3\nPnBqyvtfAH+Jw2OBv6dMaw5sJySl4us+FHgd+EkJ0xoB34jb2LHYtKMAL+szKWHar4AZKe+PjP8j\nLUuY98vAWuC8dH+v9Kr+K+0B6JX+F9AK2ABMBc4ADio2fTQxuaSMywF6x51RJvAR8K04LSPunJqU\ntA7gNEJiaUNILD2ATnHaFOCXxcpazZ4EdV3cMX45LtsHaFfWOkvY3sKdYYwrPyaHxsDlwAeAlbLs\nauBrwMpYRmNCAupC0QRV2fr5NiF5HBfjPwroklLmAsIZUVtCErusjM/zcGATsDtu2+g4/qBY7sEp\n854LvB6HfwfcXWxdy4FhKe+vJyRVB94BOhebfxkheThwbwmxlZWg1gHrgVeAnJRpTwI/LTb/VuDY\nlPf/SzizcmAx0CLd3yu9qv/SJT7B3T8FBhF3KsA6M3vKzA4uY5m57v66u+9292VALvCVChaZD7QE\nuhMSwZvuvraCy14K/MzdV3rwmrtvqOY633P3e919FyFJdyJcSirLNOAiYAjwFiG5FKpC/VwK/I+7\nL4zb9ba7v5cy/U53/8DdNwJPA1mlrcjd/+PhEl97wtneW3FSi/h3c8rsmwn1VjA9dVrx6bj7hPi+\nX6yDIvO7eybhgOcCwplpRf0UOIJwZjaZcHnwyErEdUV8fxLhMqUuT9cDSlACQNyhj3b3zoTLbYcA\nd5Q2v5kNiDfR15nZZuAywg6xImXNAf4A3AV8ZGaT432wijiMcHmvJtf5Ycp6PouDLUqZt8A0wk54\nNPBA8YlVqJ8St6ukGAlnCuXFR0xmU4En472grXFSar20IlxSJE4vXmep0wvW6+6+hHD57+cllLvD\n3XOB682sT3lxxmX+6e5b3P1zDw+wvAIMrWRcu9z9b0Bnwpmw7OOUoGQv7v4W4VJbr4JRJcw2A3gK\nOMzdWwOTCJemSpu/eBl3uvuxQE/gaMKlu4osm0e4B1GZdda4eHbzLmEn+lgJs1S2fkrdrmpqAnQE\nWrn7J4T7M6lJow/wRhx+I3WamTWPMb1ByZpQdsz7Ec6KqsLZU1/F4zqCcH/tX1WMS/YRSlCCmXU3\nsx+bWef4/jDCU2r/iLN8BHQ2s/1TFmsJbHT3HWbWn3A2UWAd4f5HiTsnMzsunmHsB2xjz0MYBWWV\ntVP7I/ALM+tmQaaZtStnnbVlDPBVd99WwrTK1s8fgWvN7Ni4XUelPuJdUWZ2jpl92cwamVkH4LfA\nkng2BeFs72dmdpCZdSfce5sSpz0O9DKzYWbWDPhvYJm7vxXX9724nMVt+j4wO5Z7vIWfKuxvZgeY\n2U8Jl0n/GadbXOf+8X0zM2sah9uY2WlxXBMzGwkMBp6LcU0HvmFmJ8WkeQvwmLtvMbOOZjbczFqY\nWWMzO43wvzunsnUnCZTum2B6pf9FuO7/EOE+yrb49x7CUTeEncpfgY3A+jjuXOA9wmWWmYTLa39O\nWecthB3xJuB4ij4kcQrhZvpWwk3x6cSb2oRHoJfG5Z6I41ZT9Cm+nxHOXrYACwmXdEpdZwnbO5di\nT/EVm+7AUaUsWxhLsfFNKPqQRKXqJ467jPDwxVbCwwl9SyqT8Kj4n0uJ7wexbrYRLgv+hfiwRZze\nFLif8HThR8A1xZb/GuGe1fZYTwXb0wiYFf8HthLOXm4gPkxCuL/2WtzejcDLwOCU9WbE+kl9rY7T\nOsTPcUusj38AQ4rFdQHh6cdthIcm2qYs+3Jc7lPCAzTfTfd3Sq+aeRX8c4mIiCSKLvGJiEgiKUGJ\niEgiKUGJiEgiKUGJiEgiKUHJPic+bryy/DnFQqvpR8XhSWZ2Ux2WvVfL9MWmb42/aRIpkRKUVJuF\nLii2xx3Oh3HHVG5LB1Xl7v/nKa1d72usjK5NapO7X+buvygntpyY1H5SB/G0cPd3arsc2XcpQUlN\n+Ya7tyC0EdcX+K80x5NI+0DXJqMIv2Mqs0NHq4W+rESKU4KSGuXuHxJaAChszNRCZ3SXprwv7AAx\ntjBwu5l9HM8olplZrzhtqJmtMLMtZva+mV0bx+eY2ZqU9V1vZv+O860ws7MrEmts/eBDM2ucMu5s\nM1tWyvyjzeydWM67scWDyjoawN1zPbQdt93dn/fQoCxmdqSZzbHQ8d96M5tuZm1SYii8ZBffF7mM\nZmbXWei87wMzu6RY/OVdcjuQ8APj7wPdzCw7ZVpBJ4tjzOw/xJYazOzhWIebzWyehb6bUrU3sxdi\nnb1sRTtATL38+HUzW2Kh08E8MxtX8SqV+koJSmqUheaSzgDeruAipxKatTma0FXG+YSuPyB0kPc9\nd29JaBewtOZr/k1oxbo14Wzkz2bWqbyC3f0fhJYJvpoy+gJCO3pFxCZ27iT0FdWS0GHf0vLKKMG/\ngF1mNtXMzjCzg4oXRejD6RBCdx6HEVqOKJeFjgevJbSw3o3QKkRlDCO0EvEw4SDjohLm+UqM67T4\n/tlYVkdCNxfTi80/ktDnVHtCfRWfXmBbLK8NoS+ty83sW5WMX+oZJSipKU+Y2RZCo6cfAzdXcLmy\nusnIB44xs1bu/om7Ly5pBe7+sIeuKHa7+4OEXmT7V7D8XGLvuGbWktD4a24p8+4mtFV3gLuvdffS\nGlEtlZfTtYmHbjZe8NCq9zpCW3oV7cbkPOBP7r7cQ/uA4yoZ3ijgQQ/djswARlho2zDVOHff5u7b\nY7z3e2yFPJbXx8xap8z/V3efF6ffCAy00NZjEV697luknlKCkpryrXhmkUNINjXR9cYwQsJ4L14e\nGljSOszsIjNbamabzGwT4WyrQuUTdsTnWGi49BxgsRfth6kgzm2Es7vLgLVm9lcLja1WmpfRtYmF\nxk//Ei9pfgr8uRLbcgjhAKHAXttRmpg0TmbPGc6TQDPC2UyqvJRlGpvZhHh59VNCm4EUi7dwfnff\nSri/dUgJ5Ve5+xapv5SgpEa5+8uE1rEnpozeBhyY8v5LxZYpsZsMD533nUW4fPQEoUHbIuI9jXuB\nK4F2HjrqW86erhrKi3cFYUd+BqVc3kuZ9zl3H0Lo0PCtWG61+N5dm9xKOLvKdPdWwHcoui2fUXpd\nriVcEixweCVCuZCwP3jazD4k9JbbjL0v86U23nkBcBbhUmJrQoOwFIu3MB4LT3a2JfRYXFxZ3ZNI\nA6UEJbXhDmCImRU8KLGUcJZyYLwpPqZgRiulmwwL3TaMNLPW7p5PaKm6pO4zmhN2muvi+i5mz86+\nomYAVxHuhT1c0gxmdrCZfTPei/qccK+m0t15WPldm7SM695kZoeyd59WS4EL4tnL6RS9DPYQMNrM\njokPPFT0MiuERPRzwsMtBa9hwNfNrF0py7Qk1MUGQtL8VQnzDLXYDQfhXtQ/3T2vhPnK6p5EGigl\nKKlx8d7JA0DBj0JvB3YSuneYStEb5a0IZyKfEM5kNrDn7OtCYHW8fHQZ4WyieFkrgNuA+XH9vQm9\nsVZGLuHS5Bx3X18wMibIgvtMjYAfE47+NxISwxVxvpPMbCsVswUYAPzTzLYREtPyuG4ISaIfoUvz\nv7J3Z4hXA98gdC8xknBmCYC7P0s4OJhDeEilQn0imdnxhLOfu9z9w5TXU3E9I0pZ9AHCZ/Y+sII9\nSTbVDEKi3AgcG2MuyRXALfE+5n9TwtmyNDzqbkNERBJJZ1AiIpJISlAiIpJISlAiIpJISlAiIpJI\nddrgY/v27T0jI6MuixQRkYR59dVX17t7h/Lmq9MElZGRwaJFi+qySBERSRgzq1ArJ7rEJyJSBXl5\neZx88sn06NGDnj178rvf/Q6A6667ju7du5OZmcnZZ5/Npk2b0hzpvksJSkSkCpo0acJtt93Gm2++\nyT/+8Q/uuusuVqxYwZAhQ1i+fDnLli3j6KOP5tZbb013qPssJSgRkSro1KkT/fr1A6Bly5b06NGD\n999/n1NPPZUmTcLdk+OPP541a9aUtRopQ9p7xczPz2fNmjXs2LEj3aE0aM2aNaNz587st1/x3hVE\npDyrV69myZIlDBgwoMj4+++/n/PPPz9NUe370p6g1qxZQ8uWLcnIyMBMjReng7uzYcMG1qxZQ9eu\nXdMdjsg+ZevWrQwbNow77riDVq1aFY4fP348TZo0YeTIqnS8LJCAS3w7duygXbt2Sk5pZGa0a9dO\nZ7EilZSfn8+wYcMYOXIk55xzTuH4qVOnMnPmTKZPn659WzWk/QwK0AeYAPoMRCrH3RkzZgw9evTg\nmmuuKRw/a9Ysfv3rX/Pyyy9z4IEHlrEGKU8iEpSIyL7mlVdeYdq0afTu3ZusrND12a9+9Suuuuoq\nPv/8c4YMGQKEByUmTZqUzlD3WYlLUNnZNbu+ivwuuHHjxvTu3ZsvvviCrl27Mm3aNNq0aVND5S/i\ngQce4M4776yR9YlIMgwaNIiSuisaOnRoGqKpnxKXoNLhgAMOYOnSpQCMGjWKu+66ixtvvLFG1p2d\nnU12TWddEalRSfyKqtGdBDwkkTQDBw7k/fffB2Du3LmceeaZhdOuvPJKpkyZAsD111/PMcccQ2Zm\nJtdeey0ADz/8ML169aJPnz4MHjx4r3UsWLCAE044gb59+3LCCSewcuXKOtwyEZF9i86gUuzatYvZ\ns2czZsyYMufbuHEjjz/+OG+99RZmVtiUyS233MJzzz3HoYceWmLzJt27d2fevHk0adKEF198kRtu\nuIFHH320VrZFRGRfpzMoYPv27WRlZdGuXTs2btxYeHOzNK1ataJZs2ZceumlPPbYY4VP6px44omM\nHj2ae++9l127du213ObNm/n2t79Nr169+NGPfsQbb7xRK9sjIlIfKEGx5x7Ue++9x86dO7nrrruA\n0NbW7t27C+cr+J1QkyZNWLBgAcOGDeOJJ57g9NNPB2DSpEn88pe/JC8vj6ysLDZs2FCknJtuuomT\nTz6Z5cuX8/TTT+t3RyIiZVCCStG6dWvuvPNOJk6cSH5+Pl26dGHFihV8/vnnbN68mdmzZwPhl+Ob\nN29m6NCh3HHHHYUPWPz73/9mwIAB3HLLLbRv3568vLwi69+8eTOHHnooQOG9LBERKVni7kGl+8mV\nvn370qdPH/7yl79w4YUXct5555GZmUm3bt3o27cvAFu2bOGss85ix44duDu33347EJrZX7VqFe7O\nKaecQp8+fXj55ZcL1/2Tn/yEUaNG8dvf/pavfvWradk+EZF9hZX0HH9tyc7O9uIdFr755pv06NGj\nzmKQ0umzkIZKj5nXLTN71d3LrXVd4hMRkURSghIRkURSghIRkURSghIRkURSghIRkURSghIRkURK\n3O+g0tHfxvjx45kxYwaNGzemUaNG3HPPPQwYMKDaRefk5DBx4kSys7MZOnQoM2bMKLEbjyVLltCv\nXz9mzZrFaaedVulyMjIyWLRoEe3bty8yftKkSRx44IFcdNFFVd4GEZF0KTdBmdlhwAPAl4DdwGR3\n/52ZtQUeBDKA1cB57v5J7YVaO+bPn8/MmTNZvHgxTZs2Zf369ezcubPGy3nmmWdKnZabm8ugQYPI\nzc0tMUG5O+5Oo0aVO+G97LLLKh2niEhSVGSP9wXwY3fvARwPfN/MjgGuB2a7ezdgdny/z1m7di3t\n27enadOmALRv355DDjkECK2TH3fccfTq1YuxY8cWdk6Wk5NDwQ+O169fT0ZGBhAanR0+fDiZmZmc\nf/75bN++vbCcjIwM1q9fv1f57s4jjzzClClTeP755wvb51u9ejU9evTgiiuuoF+/fuTl5XH55ZeT\nnZ1Nz549ufnmm4us5ze/+Q39+/enf//+vP322wCMGzeOiRMnAnDvvfdy3HHH0adPH4YNG8Znn31W\nU1UoIlIryk1Q7r7W3RfH4S3Am8ChwFnA1DjbVOBbtRVkbTr11FPJy8vj6KOP5oorrijSNNGVV17J\nwoULWb58Odu3b2fmzJllruvuu+/mwAMPZNmyZdx44428+uqr5Zb/yiuv0LVrV4488khycnKKnGmt\nXLmSiy66iCVLltClSxfGjx/PokWLWLZsGS+//DLLli0rnLdVq1YsWLCAK6+8kh/+8Id7lXPOOeew\ncOFCXnvtNXr06MF9991XkeoREUmbSl0zMrMMoC/wT+Bgd18LIYkBHWs6uLrQokULXn31VSZPnkyH\nDh04//zzCxtyfemllxgwYAC9e/dmzpw55XaPMW/ePL7zne8AkJmZSWZmZrnl5+bmMnz4cACGDx9O\nbm5u4bQuXbpw/PHHF75/6KGH6NevH3379uWNN95gxYoVhdNGjBhR+Hf+/Pl7lbN8+XJOOukkevfu\nzfTp09XVh4gkXoUfkjCzFsCjwA/d/VMzq+hyY4GxAIcffnhVYqx1jRs3Jicnh5ycHHr37s3UqVMZ\nPnw4V1xxBYsWLeKwww5j3LhxRbrbKOiGo3iXGRWtFwgdJD766KM89dRTjB8/Hndnw4YNbNmyBYDm\nzZsXzvvuu+8yceJEFi5cyEEHHcTo0aOLlJ1abkkxjB49mieeeII+ffowZcoU5s6dW+E4RUTSoUJn\nUGa2HyE5TXf3x+Loj8ysU5zeCfi4pGXdfbK7Z7t7docOHWoi5hq1cuVKVq1aVfh+6dKldOnSpXDn\n3759e7Zu3cojjzxSOE9GRkbh5bvU8YMHD2b69OlAOGNJvQRXkhdffJE+ffqQl5fH6tWree+99wr7\nmCru008/pXnz5rRu3ZqPPvqIZ599tsj0Bx98sPDvwIED91p+y5YtdOrUifz8/MIYRUSSrCJP8Rlw\nH/Cmu/82ZdJTwChgQvz7ZI1EVMdN+G7dupUf/OAHbNq0iSZNmnDUUUcxefJk2rRpw3e/+1169+5N\nRkYGxx13XOEy1157Leeddx7Tpk0r0m3G5ZdfzsUXX0xmZiZZWVn079+/zLJzc3M5++yzi4wbNmwY\nd999NyeddFKR8X369KFv37707NmTI444ghNPPLHI9M8//5wBAwawe/fuIpcJC/ziF79gwIABdOnS\nhd69exeepYmIJFW53W2Y2SDg/4DXCY+ZA9xAuA/1EHA48B/g2+6+sax1qbuNZNNnIQ2VutuoWxXt\nbqPcMyh3/xtQ2o2VUyobmIiISEWoqSMREUmkRCSouuzVV0qmz0BEkibtCapZs2Zs2LBBO8g0Kni8\nvVmzZukORUSkUNobi+3cuTNr1qxh3bp16Q6lQWvWrBmdO3dOdxgiIoXSnqD2228/unbtmu4wREQk\nYdJ+iU9ERKQkSlAiIpJISlAiIpJISlAiIpJISlAiIpJISlAiIpJISlAiIpJISlAiIpJISlAiIpJI\nSlAiIpJISlAiIpJISlAiIpJISlAiIpJISlAiIpJISlAiIpJISlAiIpJISlAiIpJISlAiIpJISlAi\nIpJISlAiIpJISlAiIpJISlAiIpJISlAiIpJISlAiIpJISlAiIpJISlAiIpJISlAiIpJISlAiIpJI\nSlAiIpJISlAiIpJISlAiIpJISlAiIpJISlAiIpJI5SYoM7vfzD42s+Up48aZ2ftmtjS+htZumCIi\n0tBU5AxqCnB6CeNvd/es+HqmZsMSEZGGrtwE5e7zgI11EIuIiEih6tyDutLMlsVLgAfVWEQiIiJU\nPUHdDRwJZAFrgdtKm9HMxprZIjNbtG7duioWJyIiDU2VEpS7f+Tuu9x9N3Av0L+MeSe7e7a7Z3fo\n0KGqcYqISANTpQRlZp1S3p4NLC9tXhERkapoUt4MZpYL5ADtzWwNcDOQY2ZZgAOrge/VYowiItIA\nlZug3H1ECaPvq4VYRERECqklCRERSSQlKBERSSQlKBERSSQlKBERSSQlKJF64pJLLqFjx4706tWr\ncNxNN91EZmYmWVlZnHrqqXzwwQdpjFCkcpSgROqJ0aNHM2vWrCLjrrvuOpYtW8bSpUs588wzueWW\nW9IUnUjlKUGJ1BODBw+mbdu2Rca1atWqcHjbtm2YWV2HJVJl5f4OSkT2bTfeeCMPPPAArVu35qWX\nXkp3OCIVpjMokXpu/Pjx5OXlMXLkSP7whz+kOxyRClOCEmkgLrjgAh599NF0hyFSYUpQIvXYqlWr\nCoefeuopunfvnsZoRCpH96BE6okRI0Ywd+5c1q9fT+fOnfn5z3/OM888w8qVK2nUqBFdunRh0qRJ\n6Q5TpMKUoETqidzc3L3GjRkzJg2RiNQMJSiRBMrOTncEe1u0KN0RSEOje1AiIpJISlAiIpJISlAi\nIpJISlAiIpJISlAiIpJISlAiIpJISlAiIpJISlAiIpJISlAiIpJISlAiIpJISlAiIpJISlAiIpJI\nSlAiIpJISlAiIpJISlAiIpJISlAiIpJISlAiIpJISlAiIpJISlAiIpJISlAiIvXIJZdcQseOHenV\nq1fhuI0bNzJkyBC6devGkCFD+OSTT9IYYcUpQYmI1COjR49m1qxZRcZNmDCBU045hVWrVnHKKacw\nYcKENEVXOUpQIiL1yODBg2nbtm2RcU8++SSjRo0CYNSoUTzxxBPpCK3SlKBEROq5jz76iE6dOgHQ\nqVMnPv744zRHVDFKUCIikkhKUCIi9dzBBx/M2rVrAVi7di0dO3ZMc0QVU26CMrP7zexjM1ueMq6t\nmb1gZqvi34NqN0wREamqb37zm0ydOhWAqVOnctZZZ6U5ooqpyBnUFOD0YuOuB2a7ezdgdnwvIiJp\nNmLECAYOHMjKlSvp3Lkz9913H9dffz0vvPAC3bp144UXXuD66/eNXXaT8mZw93lmllFs9FlAThye\nCswFflqDcYmISBXk5uaWOH727Nl1HEn1lZugSnGwu68FcPe1ZlbqBU0zGwuMBTj88MOrWJyISAOT\nnZ3uCEq2aFGdFVXrD0m4+2R3z3b37A4dOtR2cSIiUk9UNUF9ZGadAOLffeOhehER2WdUNUE9BYyK\nw6OAJ2smHBERkaAij5nnAvOBL5vZGjMbA0wAhpjZKmBIfC8iIlJjKvIU34hSJp1Sw7GIiIgUUksS\nIiKSSEpQIiKSSEpQIiKSSEpQIiKSSEpQIiKSSEpQIiKSSEpQIiKSSEpQIiKSSEpQIiKSSEpQIiKS\nSEpQIiKSSEpQIiKSSEpQIiKSSEpQIiKSSEpQIiKSSEpQIiKSSEpQIiKSSEpQIiKSSEpQIiKSSEpQ\nIiKSSEpQIiKSSEpQIiKSSA02QW3atIlzzz2X7t2706NHD+bPn5/ukETqPX3vpDKapDuAdLn66qs5\n/fTTeeSRR9i5cyefffZZukMSqff0vZPKaJAJ6tNPP2XevHlMmTIFgP3335/9998/vUGJ1HP63kll\nNchLfO+88w4dOnTg4osvpm/fvlx66aVs27Yt3WGJ1Gv63kllNcgE9cUXX7B48WIuv/xylixZQvPm\nzZkwYUK6wxKp1/S9k8pqkAmqc+fOdO7cmQEDBgBw7rnnsnjx4jRHJVK/6XsnldUgE9SXvvQlDjvs\nMFauXAnA7NmzOeaYY9IclUj9pu+dVFaDfEgC4Pe//z0jR45k586dHHHEEfzpT39Kd0gi9Z6+d1IZ\nDTZBZWVlsWjRonSHIdKg6HsnlbFPJqjs7HRHsDd956Te0xdP6liDvAclIiLJpwQlIiKJpAQlIiKJ\npAQlIiKJpAQlIiKJpAQlIiKJVK3HzM1sNbAF2AV84e4JfA5VRET2RTXxO6iT3X19DaxHRESkkC7x\niYhIIlU3QTnwvJm9amZjS5rBzMaa2SIzW7Ru3bpqFiciIg1FdRPUie7eDzgD+L6ZDS4+g7tPdvds\nd8/u0KFDNYsTEZGGoloJyt0/iH8/Bh4H+tdEUCIiIlVOUGbW3MxaFgwDpwLLayowERFp2KrzFN/B\nwONmVrCeGe4+q0aiEhGRBq/KCcrd3wH61GAsIiIihfSYuYiIJJISlIiIJJISlIiIJJISlNS6HTt2\n0L9/f/r06UPPnj25+eab0x2SiOwDaqItPpEyNW3alDlz5tCiRQvy8/MZNGgQZ5xxBscff3y6QxOR\nBNMZlNQ6M6NFixYA5Ofnk5+fT/x5gohIqZSgpE7s2rWLrKwsOnbsyJAhQxgwYEC6QxKRhFOCkjrR\nuHFjli5dypo1a1iwYAHLl6sOv4uIAAALx0lEQVTREREpmxKU1Kk2bdqQk5PDrFlqdEREyqYEJbVu\n3bp1bNq0CYDt27fz4osv0r179zRHJSJJp6f4pNatXbuWUaNGsWvXLnbv3s15553HmWeeme6wRCTh\nlKCk1mVmZrJkyZJ0hyEi+xhd4hMRkUTSGVRC5OXlcdFFF/Hhhx/SqFEjxo4dy9VXX53usADIzk53\nBHtbtCjdEYhIbVOCSogmTZpw22230a9fP7Zs2cKxxx7LkCFDOOaYY9IdmohIWugSX0J06tSJfv36\nAdCyZUt69OjB+++/n+aoRETSRwkqgVavXs2SJUvU2oKINGhKUAmzdetWhg0bxh133EGrVq3SHY6I\nSNooQSVIfn4+w4YNY+TIkZxzzjnpDkdEJK2UoBLC3RkzZgw9evTgmmuuSXc4IiJppwSVEK+88grT\npk1jzpw5ZGVlkZWVxTPPPJPusERE0kaPmSfEoEGDcPd0hyEikhhKUDVFv2bd51xyySXMnDmTjh07\nqvsPkQTSJT5psEaPHq1uP0QSTAlKGqzBgwfTtm3bdIchIqVQghIRkURSghIRkURSghIRkURSghIR\nkURSgpIGa8SIEQwcOJCVK1fSuXNn7rvvvnSHJCIp9DsoabByc3PTHYKIlEEJSvZN+mG0SL2nS3wi\nIpJISlAiIpJISlAiIpJISlAiIpJISlAiIpJISlAiIpJI1UpQZna6ma00s7fN7PqaCkpERKTKCcrM\nGgN3AWcAxwAjzOyYmgpMREQatuqcQfUH3nb3d9x9J/AX4KyaCUtERBq66rQkcSiQl/J+DTCg+Exm\nNhYYG99uNbOV1SgzsQzaA+vTHUcRZumOoNaovuue6rxuJbK+oabqvEtFZqpOgiopSt9rhPtkYHI1\nytknmNkid09g+zv1k+q77qnO65bqu3qX+NYAh6W87wx8UL1wREREguokqIVANzPramb7A8OBp2om\nLBERaeiqfInP3b8wsyuB54DGwP3u/kaNRbbvqfeXMRNG9V33VOd1q8HXt7nvddtIREQk7dSShIiI\nJJISlIiIJJISlKSdmV1lZm+a2XQza2pmL5rZUjM7v5T5LzOzi0oYn2Fmy2s/YhGpC0pQVWBm1fn9\nWME6GtdELPXEFcBQdx8J9AX2c/csd3+wpJndfZK7P1CnEdYhM7shZbiNmV1RB2VmmNkFtV1ObavM\nQUrqgVEVytla+ejSw8wOMbNH4nCWmQ1NmZZjZidUYZ2rzax9TcZZkgafoMzsIjNbZmavmdk0M+ti\nZrPjuNlmdnicb4qZ/dbMXgJ+bWbjzOx+M5trZu+Y2VUp6/yOmS2IZwH3FCQjM9tqZreY2T+BgWY2\nwcxWxLImpqcG6paZXWNmy+Prh2Y2CTgCeMrMfgr8GciKdXdkSXUU6/7aOHxs/OzmA99PKaexmf3G\nzBbGZb8Xx3cys3lx/cvN7KQ6r4Ty3ZAy3IaQwGtbBrDPJ6hKSj0wqrfc/QN3Pze+zQKGpkzOASqd\noOqMuzfYF9ATWAm0j+/bAk8Do+L7S4An4vAUYCbQOL4fB/wdaEpokmQDsB/QI65jvzjf/wIXxWEH\nzkspayV7nqRsk+76qIP6PhZ4HWgOtADeIJwxrU75DHKAmWXVUaz7a+PwMuArcfg3wPI4PBb4WRxu\nCiwCugI/Bm6M4xsDLdNcJ08Ar8a6GAtMAHYBS4HphDYut8f3v4nLXEf4HeIy4OdxXAbwFvBHYHlc\n9mvAK8AqoH9K3U0D5sTx343j/wFsjuX8KH43FsT3y4BuZWzDNbHM5cAPU+J5E7g3btvzwAFlrOO4\nWM78Yp9jM+BP8f9mCXByyvr/D1gcXyekjF9egXqfBOyM6/1x/ByWxXrILP5/Ft8vBzLi8Nb4txMw\nL9bTcuCkMso8Pcb6GjA75X+8tLKnxnpbDZwD/E+MdxZ79i+rgV/FelsE9CP89OffwGWpdQLsD/wH\nWBfj/SnwIfB+fH8S0AF4lPD/tRA4Ma6jXYxlCXAP8B7xO1ur3490fjnT/QJ+AIwvNm59yoe/H7A+\nDk8hJq6Uf6AbU96/SWhN40pCixpL42slMC7O8wV7ElyT+I96X/zn2z/d9VEH9X01cEvK+18AV1F6\ngiqxjgp2HEBr4D8p68tkz47tEeBfKZ/Du8CpwGDg7biOrATUSdv494C4E2lH3PnF8Rmk7HDjNkwm\nNDXWiHDQNDjO9wXQO45/Fbg/zncWew60xsU6PYBwYJUHHJJa73G+3wMj4/D+lJJcKP2goyCerDjf\nQ8B3yqiH5exJMhNSPscfA3+Kw90JO9hmwIFAszi+G7CopPoqp+5Xxzr4PXBzHPdVYGnq/1mxGDPi\n8NaU+Mo94CHs+POArsU+97LK/hthH9QH+Aw4I057HPhWyjZcHodvJyS6lrG8j4vXCTAa+ENKXMW3\ncQYwKA4fDrwZh+8E/jsOf51wsF3rCara91L2cUYJ7QcWkzp9W7Fpn6cM7yLsUA2Y6u7/VcK6drj7\nLij8oXN/4BRCKxxXEv5B67NKtTJZgToq6/Mz4Afu/txeE8wGE75k08zsN57e+1lXmdnZcfgwws62\nLKfG15L4vkVc5j/Au+7+OoCZvUE4Sncze52wkyrwpLtvB7bHS9b9gU3FypkP3GhmnYHH3H1VKfEM\nAh53922x3McIR+JPxXiWxvleLRZDITNrQ9ix/z2OmgGcmbL+3wO4+1tm9h5wNOEI/g9mlkX47h1d\nSnwVMQgYFsuYY2btzKx1BZddCNxvZvsRDgKWljLf8cA8d383lrOxAmU/6+758fNrTDhzgnBAkJGy\n7qdSxrdw9y3AFjPbEeu2Mr4GHGN7GoRtZWYtCQdB58Q4/2pmn1RyvVXS0O9BzQbOM7N2AGbWlnDZ\nbnicPpJwFFPZdZ5rZh0L1mlme7Xca2YtgNbu/gzwQ8K14fpuHvAtMzvQzJoDZxMu05SovDpy903A\nZjMbFEel3kt4Drg87jgws6PNrHn8LD5293sJZ2b9amjbKs3Mcgg7hIHu3oeQdJqVtxhwq4eHSLLc\n/Sh3vy9OSz1g2p3yfjdFW40pntRLauR5BvBNwuXF58ystIOnsg46SjqAq+w6Spv2I+AjwtlFNuEs\nr6pKa/j6C4ruI/f6bNx9HmHn/T7hgGevp0tTyijpYKqsRrc/j2XsBvI9nr6w9+eZ+jkX/x+o7ElI\nI8L/Y8H/16Ex4aXGVWcadILy0DTTeOBlM3sN+C3hktPFZrYMuJBwWaoy61wB/Ax4Pq7jBcJ16uJa\nAjPjPC8TvnD1mrsvJlwqXQD8E/ijuy8pY5GK1NHFwF3xIYntKeP/CKwAFsenuu4hfFlzgKVmtoRw\n5Pq76mxTNbUGPnH3z8ysO+EoGyC/ILECWwj1UOA54JKYvDGzQwsOhirhLDNrFg/McghnAUXKMbMj\ngHfc/U7CEXpmKeuq1EFHSdz9E8IRf8H2D0+ZPI944GFmRxMuO60k1N3auPO+kHCGUVWpZeQQLut/\nSrh81i+O70e4h1lEJQ545gNfMbOucbm25ZRdW4r/PxV//zzhSgUxpoKDwtQ4zwAOqsUY96jta4h6\n6aVXyS/CwxvPEu4bPAzMJSSMXxPuaU6P880g3P8oeEjiasLlnNcJO74j2fte1RTg3DhcOI1wz2Ey\n4Uw/9SGJ/eK41wgHAv9FuJ+0lHBpqW0Z21HaQxKp8VxLvBdbyjoGsOchiVuBV+L4ZnFbij8k0Y09\nDxbcyp57QkXKLaf+VxPuQbUFnmTvBxUOIOywlxIe9niTve9BjYrbvYSQmLuWUd4Zcb7XgBfiuNLK\nHkfRe0Op9yULp1H0/u1oit5fKti+1M+/LeGAZClwPuHS6DL2PCTRHngwjlsBTIrLFTwksZhwr6tO\nHpJQW3wiDYiZjSPs7BL1swYza+HuW+Pw9UAnd6/U1Qupfxr6QxIikgxfN7P/IuyT3iOcDUgDpzMo\nESlXvF81u4RJp7j7hkqs5y7gxGKjf+fuf6pOfEkSf4jftNjoCz0+YSkVpwQlIiKJ1KCf4hMRkeRS\nghIRkURSghIRkURSghIRkUT6f7cqfPLg2A8NAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0xb663f98>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "m = match_dict['300331503']\n",
+    "\n",
+    "wanted_keys = ['corners', 'offsides', 'attempts_on_goal', 'fouls_committed']\n",
+    "n_groups = len(wanted_keys)\n",
+    "home_team_shown_data = []\n",
+    "away_team_shown_data = []\n",
+    "for k in wanted_keys:\n",
+    "    home_team_shown_data.append(m.home_team_statistics[k])\n",
+    "    away_team_shown_data.append(m.away_team_statistics[k])\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "index = np.arange(n_groups)\n",
+    "bar_width = 0.4\n",
+    "opacity = 0.8\n",
+    "\n",
+    "rects1 = ax.bar(index, home_team_shown_data, bar_width,\n",
+    "                alpha=opacity, color='b',\n",
+    "                label=m.home_team_statistics['country'])\n",
+    "\n",
+    "rects2 = ax.bar(index + bar_width, away_team_shown_data, bar_width,\n",
+    "                alpha=opacity, color='r',\n",
+    "                label=m.away_team_statistics['country'])\n",
+    "\n",
+    "ax.set_title('Statistics in Match ' + m.getMatchId() + '\\n' + m.getHomeTeam().getCountryName() + '  v.s.  ' + m.getAwayTeam().getCountryName())\n",
+    "ax.set_xticks(index + bar_width / 2)\n",
+    "ax.set_xticklabels(wanted_keys)\n",
+    "\n",
+    "# show value labels above the bars\n",
+    "rects = ax.patches\n",
+    "for rect in rects:\n",
+    "    height = rect.get_height()\n",
+    "    ax.text(rect.get_x() + rect.get_width() / 2, height, height,\n",
+    "            ha='center', va='bottom')\n",
+    "\n",
+    "\n",
+    "ax.legend()\n",
+    "fig.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
