Modified codes of fetching group and team info to adapt the API's change of .../teams/group_results

--- a/Simon's world cup 2018 playground.ipynb
+++ b/Simon's world cup 2018 playground.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -272,7 +272,7 @@
     "                d[\"v.s. \" + m.getAwayTeam().getCountryName() + \"   [\" + m.getMatchId() + \"]\"] = m\n",
     "            else:\n",
     "                d[\"v.s. \" + m.getHomeTeam().getCountryName() + \"   [\" + m.getMatchId() + \"]\"] = m\n",
-    "        return d      "
+    "        return d"
    ]
   },
   {
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -388,10 +388,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "group_results_json = urllib.request.urlopen('http://worldcup.sfg.io/teams/group_results')\n",
@@ -399,18 +397,18 @@
     "\n",
     "for group in group_results_python:\n",
     "    team_dict_in_group = {}\n",
-    "    for team in group['group']['teams']:\n",
-    "        team_dict_in_group[team['team']['country']] = wc_team(team['team']['id'], team['team']['country'], team['team']['fifa_code'],\n",
-    "                                                              team['team']['wins'], team['team']['draws'], team['team']['losses'],\n",
-    "                                                              team['team']['games_played'], team['team']['points'], team['team']['goals_for'],\n",
-    "                                                              team['team']['goals_against'], team['team']['goal_differential'])\n",
-    "        team_dict[team['team']['country']] = team_dict_in_group[team['team']['country']]\n",
-    "    group_dict[group['group']['letter']] = wc_group(group['group']['id'], group['group']['letter'], team_dict_in_group)"
+    "    for team in group['ordered_teams']:\n",
+    "        team_dict_in_group[team['country']] = wc_team(team['id'], team['country'], team['fifa_code'],\n",
+    "                                                              team['wins'], team['draws'], team['losses'],\n",
+    "                                                              team['games_played'], team['points'], team['goals_for'],\n",
+    "                                                              team['goals_against'], team['goal_differential'])\n",
+    "        team_dict[team['country']] = team_dict_in_group[team['country']]\n",
+    "    group_dict[group['letter']] = wc_group(group['id'], group['letter'], team_dict_in_group)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -418,25 +416,25 @@
      "output_type": "stream",
      "text": [
       "Group: A\n",
-      "Russia(RUS) Wins:2 Draws:0 Losses:0 Games played:2 Points:6 Goals for:8 Goals against:1 Goal differential:7\n",
-      "Uruguay(URU) Wins:2 Draws:0 Losses:0 Games played:2 Points:6 Goals for:2 Goals against:0 Goal differential:2\n",
-      "Egypt(EGY) Wins:0 Draws:0 Losses:2 Games played:2 Points:0 Goals for:1 Goals against:4 Goal differential:-3\n",
-      "Saudi Arabia(KSA) Wins:0 Draws:0 Losses:2 Games played:2 Points:0 Goals for:0 Goals against:6 Goal differential:-6\n",
+      "Uruguay(URU) Wins:3 Draws:0 Losses:0 Games played:3 Points:9 Goals for:5 Goals against:0 Goal differential:5\n",
+      "Russia(RUS) Wins:2 Draws:0 Losses:1 Games played:3 Points:6 Goals for:8 Goals against:4 Goal differential:4\n",
+      "Saudi Arabia(KSA) Wins:1 Draws:0 Losses:2 Games played:3 Points:3 Goals for:2 Goals against:7 Goal differential:-5\n",
+      "Egypt(EGY) Wins:0 Draws:0 Losses:3 Games played:3 Points:0 Goals for:2 Goals against:6 Goal differential:-4\n",
       "Group: B\n",
-      "Spain(ESP) Wins:1 Draws:1 Losses:0 Games played:2 Points:4 Goals for:4 Goals against:3 Goal differential:1\n",
-      "Portugal(POR) Wins:1 Draws:1 Losses:0 Games played:2 Points:4 Goals for:4 Goals against:3 Goal differential:1\n",
-      "Iran(IRN) Wins:1 Draws:0 Losses:1 Games played:2 Points:3 Goals for:1 Goals against:1 Goal differential:0\n",
-      "Morocco(MAR) Wins:0 Draws:0 Losses:2 Games played:2 Points:0 Goals for:0 Goals against:2 Goal differential:-2\n",
+      "Spain(ESP) Wins:1 Draws:2 Losses:0 Games played:3 Points:5 Goals for:6 Goals against:5 Goal differential:1\n",
+      "Portugal(POR) Wins:1 Draws:2 Losses:0 Games played:3 Points:5 Goals for:5 Goals against:4 Goal differential:1\n",
+      "Iran(IRN) Wins:1 Draws:1 Losses:1 Games played:3 Points:4 Goals for:2 Goals against:2 Goal differential:0\n",
+      "Morocco(MAR) Wins:0 Draws:1 Losses:2 Games played:3 Points:1 Goals for:2 Goals against:4 Goal differential:-2\n",
       "Group: C\n",
-      "France(FRA) Wins:2 Draws:0 Losses:0 Games played:2 Points:6 Goals for:3 Goals against:1 Goal differential:2\n",
-      "Denmark(DEN) Wins:1 Draws:1 Losses:0 Games played:2 Points:4 Goals for:2 Goals against:1 Goal differential:1\n",
-      "Australia(AUS) Wins:0 Draws:1 Losses:1 Games played:2 Points:1 Goals for:2 Goals against:3 Goal differential:-1\n",
-      "Peru(PER) Wins:0 Draws:0 Losses:2 Games played:2 Points:0 Goals for:0 Goals against:2 Goal differential:-2\n",
+      "France(FRA) Wins:2 Draws:1 Losses:0 Games played:3 Points:7 Goals for:3 Goals against:1 Goal differential:2\n",
+      "Denmark(DEN) Wins:1 Draws:2 Losses:0 Games played:3 Points:5 Goals for:2 Goals against:1 Goal differential:1\n",
+      "Peru(PER) Wins:1 Draws:0 Losses:2 Games played:3 Points:3 Goals for:2 Goals against:2 Goal differential:0\n",
+      "Australia(AUS) Wins:0 Draws:1 Losses:2 Games played:3 Points:1 Goals for:2 Goals against:5 Goal differential:-3\n",
       "Group: D\n",
-      "Croatia(CRO) Wins:2 Draws:0 Losses:0 Games played:2 Points:6 Goals for:5 Goals against:0 Goal differential:5\n",
-      "Nigeria(NGA) Wins:1 Draws:0 Losses:1 Games played:2 Points:3 Goals for:2 Goals against:2 Goal differential:0\n",
-      "Iceland(ISL) Wins:0 Draws:1 Losses:1 Games played:2 Points:1 Goals for:1 Goals against:3 Goal differential:-2\n",
-      "Argentina(ARG) Wins:0 Draws:1 Losses:1 Games played:2 Points:1 Goals for:1 Goals against:4 Goal differential:-3\n",
+      "Croatia(CRO) Wins:3 Draws:0 Losses:0 Games played:3 Points:9 Goals for:7 Goals against:1 Goal differential:6\n",
+      "Argentina(ARG) Wins:1 Draws:1 Losses:1 Games played:3 Points:4 Goals for:3 Goals against:5 Goal differential:-2\n",
+      "Nigeria(NGA) Wins:1 Draws:0 Losses:2 Games played:3 Points:3 Goals for:3 Goals against:4 Goal differential:-1\n",
+      "Iceland(ISL) Wins:0 Draws:1 Losses:2 Games played:3 Points:1 Goals for:2 Goals against:5 Goal differential:-3\n",
       "Group: E\n",
       "Brazil(BRA) Wins:1 Draws:1 Losses:0 Games played:2 Points:4 Goals for:3 Goals against:1 Goal differential:2\n",
       "Switzerland(SUI) Wins:1 Draws:1 Losses:0 Games played:2 Points:4 Goals for:3 Goals against:2 Goal differential:1\n",
@@ -595,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -633,13 +631,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05565dca7f9946488e5c91f2e52d1d3b",
+       "model_id": "6ba069b040ce47b3b1bb0ba52b68cdc2",
        "version_major": 2,
        "version_minor": 0
       },
