Slight change to handle situation where there is no "home_team_statistics" or "away_team_statistics" entries

--- a/Simon's world cup 2018 playground.ipynb
+++ b/Simon's world cup 2018 playground.ipynb
@@ -593,10 +593,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "all_matches_json = urllib.request.urlopen('http://worldcup.sfg.io/matches')\n",
@@ -612,14 +610,12 @@
     "                                                away_team = team_dict[m['away_team']['country']],\n",
     "                                                home_team_goals = m['home_team']['goals'],\n",
     "                                                away_team_goals = m['away_team']['goals'],\n",
-    "                                                home_team_statistics = m['home_team_statistics'],\n",
-    "                                                away_team_statistics = m['away_team_statistics'],\n",
+    "                                                home_team_statistics = m['home_team_statistics'] if 'home_team_statistics' in m else {},\n",
+    "                                                away_team_statistics = m['away_team_statistics'] if 'away_team_statistics' in m else {},\n",
     "                                                home_event_list = m['home_team_events'],\n",
     "                                                away_event_list = m['away_team_events'], winner = m['winner_code'])\n",
     "            team_dict[m['home_team']['country']].addMatch(match_dict[m['fifa_id']])\n",
-    "            team_dict[m['away_team']['country']].addMatch(match_dict[m['fifa_id']])\n",
-    "            \n",
-    "    "
+    "            team_dict[m['away_team']['country']].addMatch(match_dict[m['fifa_id']])"
    ]
   },
   {
