Added feature of handling "starting eleven" of every match and a very simple test example

--- a/Simon's world cup 2018 playground.ipynb
+++ b/Simon's world cup 2018 playground.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -318,9 +318,12 @@
     "                self.winner = self.home_team if self.home_team.getFifaCode() == winner else self.away_team\n",
     "            else:\n",
     "                self.winner = \"Draw\"\n",
+    "            self._buildStartingElevenList()\n",
     "            self._buildOrderedEventList()\n",
     "        else:\n",
     "            self.ordered_event_list = []\n",
+    "            self.home_team_starting_eleven = []\n",
+    "            self.away_team_starting_eleven = []\n",
     "            self.winner = \"\"\n",
     "        \n",
     "    def __repr__(self):\n",
@@ -331,6 +334,16 @@
     "        from operator import itemgetter\n",
     "        e_list = self.home_event_list + self.away_event_list\n",
     "        self.ordered_event_list = sorted(e_list, key=itemgetter(\"time\",\"id\"))\n",
+    "        \n",
+    "    def _buildStartingElevenList(self):\n",
+    "        if self.home_team_statistics:\n",
+    "            self.home_team_starting_eleven = self.home_team_statistics['starting_eleven']\n",
+    "        else:\n",
+    "            self.home_team_starting_eleven = []\n",
+    "        if self.away_team_statistics:\n",
+    "            self.away_team_starting_eleven = self.away_team_statistics['starting_eleven']\n",
+    "        else:\n",
+    "            self.away_team_starting_eleven = []\n",
     "    \n",
     "    def getMatchId(self):\n",
     "        return self.fifa_id\n",
@@ -340,12 +353,18 @@
     "    \n",
     "    def getWinner(self):\n",
     "        return self.winner\n",
+    "\n",
+    "    def getHomeTeamStartingEleven(self):\n",
+    "        return self.home_team_starting_eleven\n",
     "    \n",
     "    def getHomeTeam(self):\n",
     "        return self.home_team\n",
     "    \n",
     "    def getHomeTeamGoals(self):\n",
     "        return self.home_team_goals\n",
+    "    \n",
+    "    def getAwayTeamStartingEleven(self):\n",
+    "        return self.away_team_starting_eleven  \n",
     "    \n",
     "    def getAwayTeam(self):\n",
     "        return self.away_team\n",
@@ -388,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,6 +457,55 @@
     "                                                away_event_list = m['away_team_events'], winner = m['winner_code'])\n",
     "            team_dict[m['home_team']['country']].addMatch(match_dict[m['fifa_id']])\n",
     "            team_dict[m['away_team']['country']].addMatch(match_dict[m['fifa_id']])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### test codes to show starting eleven"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Francis UZOHO', 'captain': False, 'shirt_number': 23, 'position': 'Goalie'}\n",
+      "{'name': 'Bryan IDOWU', 'captain': False, 'shirt_number': 2, 'position': 'Defender'}\n",
+      "{'name': 'Wilfred NDIDI', 'captain': False, 'shirt_number': 4, 'position': 'Midfield'}\n",
+      "{'name': 'William EKONG', 'captain': False, 'shirt_number': 5, 'position': 'Defender'}\n",
+      "{'name': 'Leon BALOGUN', 'captain': False, 'shirt_number': 6, 'position': 'Defender'}\n",
+      "{'name': 'Ahmed MUSA', 'captain': False, 'shirt_number': 7, 'position': 'Forward'}\n",
+      "{'name': 'Oghenekaro ETEBO', 'captain': False, 'shirt_number': 8, 'position': 'Midfield'}\n",
+      "{'name': 'John Obi MIKEL', 'captain': True, 'shirt_number': 10, 'position': 'Midfield'}\n",
+      "{'name': 'Victor MOSES', 'captain': False, 'shirt_number': 11, 'position': 'Forward'}\n",
+      "{'name': 'Kelechi IHEANACHO', 'captain': False, 'shirt_number': 14, 'position': 'Forward'}\n",
+      "{'name': 'Kenneth OMERUO', 'captain': False, 'shirt_number': 22, 'position': 'Defender'}\n",
+      "{'name': 'Hannes HALLDORSSON', 'captain': False, 'shirt_number': 1, 'position': 'Goalie'}\n",
+      "{'name': 'Birkir SAEVARSSON', 'captain': False, 'shirt_number': 2, 'position': 'Defender'}\n",
+      "{'name': 'Ragnar SIGURDSSON', 'captain': False, 'shirt_number': 6, 'position': 'Defender'}\n",
+      "{'name': 'Birkir BJARNASON', 'captain': False, 'shirt_number': 8, 'position': 'Midfield'}\n",
+      "{'name': 'Gylfi SIGURDSSON', 'captain': False, 'shirt_number': 10, 'position': 'Midfield'}\n",
+      "{'name': 'Alfred FINNBOGASON', 'captain': False, 'shirt_number': 11, 'position': 'Forward'}\n",
+      "{'name': 'Kari ARNASON', 'captain': False, 'shirt_number': 14, 'position': 'Defender'}\n",
+      "{'name': 'Aron GUNNARSSON', 'captain': True, 'shirt_number': 17, 'position': 'Midfield'}\n",
+      "{'name': 'Hordur MAGNUSSON', 'captain': False, 'shirt_number': 18, 'position': 'Defender'}\n",
+      "{'name': 'Rurik GISLASON', 'captain': False, 'shirt_number': 19, 'position': 'Midfield'}\n",
+      "{'name': 'Jon BODVARSSON', 'captain': False, 'shirt_number': 22, 'position': 'Forward'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = match_dict['300331497']\n",
+    "for player in m.getHomeTeamStartingEleven():\n",
+    "    print(player)\n",
+    "for player in m.getAwayTeamStartingEleven():\n",
+    "    print(player)"
    ]
   },
   {
